--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand wobble-horizontal" href="#">Elzero <span>Inc.</span></a>
+              <a class="navbar-brand wobble-horizontal" href="#">Marwa <span>Inc.</span></a>
             </div>
             <div class="collapse navbar-collapse" id="ournavbar">
               <ul class="nav navbar-nav navbar-right">
